# calgen

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/calgen/: __init__.py  calendar.py  cli.py  generator.py  jinja_env.py  localization.py
src/calgen/templates/: basic.tex.j2
